@@ -1,6 +1,6 @@
 Summary: On-demand screenshooting server
 Name: itaka
-Version: 1.0
+Version: 0.2.2
 Release: 1
 License: GPL
 Group: Applications/Communications
@@ -8,7 +8,7 @@ URL: http://www.jardinpresente.com.ar/trac/itaka/
 
 Packager: Kurt Erickson <psychogenicshk@users.sourceforge.net>
 
-Source: http://internap.dl.sourceforge.net/sourceforge/itaka/itaka-1.0.tar.bz2
+Source: http://internap.dl.sourceforge.net/sourceforge/itaka/itaka-0.2.2.tar.bz2
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
 
 Requires: python >= 2.3
@@ -50,22 +50,13 @@ rm -rf $RPM_BUILD_ROOT
 %{_prefix}/bin/itaka
 %{_prefix}/share/man/man1/itaka.1.gz
 %{_prefix}/share/applications/itaka.desktop
-%{_prefix}/share/itaka/images/itaka16x16.png
-%{_prefix}/share/itaka/images/itaka-take.png
-%{_prefix}/share/itaka/images/itaka32x32.png
-%{_prefix}/share/itaka/images/itaka-secure-take.png
-%{_prefix}/share/itaka/images/itaka64x64-take.png
-%{_prefix}/share/itaka/images/itaka16x16-take.png
-%{_prefix}/share/itaka/images/itaka512x512-take.png
-%{_prefix}/share/itaka/images/itaka-secure.svg
-%{_prefix}/share/itaka/images/itaka.psd
-%{_prefix}/share/itaka/images/itaka64x64.png
-%{_prefix}/share/itaka/images/itaka512x512.png
 %{_prefix}/share/itaka/images/itaka.png
-%{_prefix}/share/itaka/images/itaka.svg
+%{_prefix}/share/itaka/images/itaka-take.png
 %{_prefix}/share/itaka/images/itaka-secure.png
-%{_prefix}/share/itaka/images/itaka-logo.png
-%{_prefix}/share/itaka/images/favicon.ico
+%{_prefix}/share/itaka/images/itaka-secure-take.png
+%{_prefix}/share/itaka/images/itaka16x16-take.png
+%{_prefix}/share/itaka/images/itaka16x16-secure-take.png
+%{_prefix}/share/itaka/images/itaka64x64.png
 %{_prefix}/share/pixmaps/itaka.png
 %{_prefix}/lib/itaka/uigtk.py
 %{_prefix}/lib/itaka/config.py
@@ -83,9 +74,6 @@ rm -rf $RPM_BUILD_ROOT
 %{_prefix}/lib/itaka/console.pyc
 
 %changelog
-* Thu Jul 20 2007 Kurt Erickson <psychogenicshk@users.sourceforge.net> - 0.2.1-2
-- Pulled 1.0 from upstream.
-
 * Thu Jul 20 2007 Kurt Erickson <psychogenicshk@users.sourceforge.net> - 0.2.1-2
 - Removed notify-python dependancy (it's optional).
 
